Fixed some stuff